--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="mongodb+srv://lealgustavo0099:19711303@cluster0.9gfyhup.mongodb.net/test?retryWrites=true&w=majority&appName=Cluster0"
+SECRET="197113032011"
+NEXT_PUBLIC_APP_URL="http://localhost:3000"
