--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-scroll-area": "^1.1.0",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
@@ -24,12 +26,12 @@
     "clsx": "^2.1.1",
     "lucide-react": "^0.427.0",
     "mongodb": "^6.8.0",
-    "next": "14.2.5",
+    "next": "^14.2.13",
     "next-auth": "^4.24.7",
     "prisma": "^5.18.0",
     "react": "^18",
     "react-dom": "^18",
-    "react-hook-form": "^7.52.2",
+    "react-hook-form": "^7.53.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
